fix issue with menu items getting cut off (#1)

--- a/css/ai.css
+++ b/css/ai.css
@@ -46,11 +46,13 @@
     }
 
     .drawer-open .drawer-side {
-        @apply bg-white dark:bg-black w-full
+        @apply bg-white dark:bg-black 
+        /* @apply w-full */
     }
 
     .drawer-toggle:checked ~ .drawer-side > .drawer-overlay {
-        @apply bg-white bg-opacity-100 dark:bg-black dark:text-white text-black h-full !important
+        @apply bg-white bg-opacity-100 dark:bg-black dark:text-white text-black !important
+        /* @apply h-full  */
     }
 
     .drawer-toggle:checked ~  #sidebar-close-btn {
@@ -62,11 +64,17 @@
     }
 
     ul.menu {
-        @apply w-full sm:w-72 mt-12 sm:mt-0
+        @apply mt-12 sm:mt-0 w-full
+        /* @apply w-full sm:w-72  */
     }
 
     ul.menu > li {
-        @apply leading-6 font-medium
+        @apply leading-6 font-medium w-full
+    }
+
+    ul.menu details {
+        /* width: 100%; */
+        @apply w-full
     }
 
     ul.menu > li.upcoming {
@@ -84,6 +92,7 @@
 
     ul.sub_menu > li {
         @apply leading-3 w-full
+        /* @apply w-full */
     }
 
     ul.menu > li:hover {
@@ -103,7 +112,15 @@
     }
 
     ul.sub_menu > li a {
-        @apply w-1/2
+        /* @apply w-1/2 */
+        white-space: normal;
+        line-height: 1.5em;
+        @apply w-full
+        
+    }
+
+    ul.sub_menu > li a {
+        text-wrap: wrap !important;
     }
 
     ul.sub_menu > li:hover a {
